@@ -549,9 +549,9 @@ public class FontEditor implements PropertyEditor, XMLPropertyEditor {
     private static boolean gtkShouldAntialias() {
         if (gtkAA == null) {
             Object o = Toolkit.getDefaultToolkit().getDesktopProperty("gnome.Xft/Antialias"); //NOI18N
-            gtkAA = new Integer(1).equals(o) ? Boolean.TRUE : Boolean.FALSE;
+            gtkAA = Integer.valueOf(1).equals(o);
         }
 
-        return gtkAA.booleanValue();
+        return gtkAA;
     }
 }
